Address comments for BaseBrokerRoutingManager